--- a/translation/po/ja.pot
+++ b/translation/po/ja.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-03-13 20:59+0900\n"
+"POT-Creation-Date: 2025-03-14 15:28+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -204,7 +204,7 @@ msgstr ""
 #. type: Plain text
 #: ../README.md:48
 #, markdown-text
-msgid "1時間に1回としています（ホロジュールは15分に1度のようです。）。"
+msgid "1時間に1回としています（ホロジュールは15分に1度のようです）。"
 msgstr ""
 
 #. type: Plain text
@@ -275,6 +275,14 @@ msgstr ""
 
 #. type: Plain text
 #: ../README.md:74
+#, markdown-text
+msgid ""
+"このプログラムの開発、運用は[ホロライブプロダクションの二次創作ガイドライン](https://hololivepro.com/terms/ "
+"\"hololive\")に則って行います。"
+msgstr ""
+
+#. type: Plain text
+#: ../README.md:76
 #, markdown-text
 msgid "このプログラムはMITライセンスの元に配布されます。 詳細は[LICENSEファイル](LICENSE)をご参照ください。"
 msgstr ""
