Mention the official holoplus app.

--- a/locale/en/LC_MESSAGES/README.po
+++ b/locale/en/LC_MESSAGES/README.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Holodule iCalendar \n"
 "Report-Msgid-Bugs-To: https://github.com/gemmaro/holodule-ics/issues\n"
-"POT-Creation-Date: 2025-03-19 12:18+0900\n"
-"PO-Revision-Date: 2025-03-19 12:17+0900\n"
+"POT-Creation-Date: 2025-03-19 13:57+0900\n"
+"PO-Revision-Date: 2025-03-19 13:59+0900\n"
 "Last-Translator: gemmaro <gemmaro.dev@gmail.com>\n"
 "Language: en\n"
 "Language-Team: none\n"
@@ -185,11 +185,12 @@ msgid "通知が欲しい"
 msgstr "I want notifications"
 
 #: ../../README.md:52
-msgid "カレンダー側で通知を設定できるものがあります。 YouTube の通知機能もご検討ください。"
+msgid ""
+"カレンダー側で通知を設定できるものがあります。 "
+"[ホロプラス](https://www.holoplus.com/)、YouTubeチャンネルの通知機能等もご検討ください。"
 msgstr ""
-"Some calendars allow you to set notifications.  Please also consider "
-"using\n"
-"YouTube's notification feature."
+"Some calendars allow you to set notifications.  Please also consider using\n"
+"[holoplus](https://www.holoplus.com/en/) and YouTube's notification feature."
 
 #: ../../README.md:55
 msgid "配信の長さについて"
