--- a/locale/en/LC_MESSAGES/CONTRIBUTING.po
+++ b/locale/en/LC_MESSAGES/CONTRIBUTING.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Holodule iCalendar \n"
 "Report-Msgid-Bugs-To: https://github.com/gemmaro/holodule-ics/issues\n"
-"POT-Creation-Date: 2025-05-07 20:14+0900\n"
-"PO-Revision-Date: 2025-05-07 20:16+0900\n"
+"POT-Creation-Date: 2025-05-17 18:25+0900\n"
+"PO-Revision-Date: 2025-05-17 18:26+0900\n"
 "Last-Translator: gemmaro <gemmaro.dev@gmail.com>\n"
 "Language: en\n"
 "Language-Team: none\n"
@@ -71,12 +71,17 @@ msgid ""
 "カレンダーアプリの中には、URLのフィールドを解釈しないものがあるためです。 一例ではMicrosoft "
 "Outlookのウェブ版がこれに該当します。"
 msgstr ""
-"The event video URL is output in both the description section and the URL\n"
-"field.  At first glance, this may seem redundant, but there is a reason for\n"
+"The event video URL is output in both the description section and the URL"
+"\n"
+"field.  At first glance, this may seem redundant, but there is a reason "
+"for\n"
 "it.  Generally, it is better to use the URL field.  This is because if a\n"
-"calendar app does not parse URLs included in the description section, it may\n"
-"become cumbersome to access the link.  On the other hand, only including the\n"
-"URL in the field without placing it in the description section can also be\n"
+"calendar app does not parse URLs included in the description section, it "
+"may\n"
+"become cumbersome to access the link.  On the other hand, only including "
+"the\n"
+"URL in the field without placing it in the description section can also "
+"be\n"
 "problematic, as some calendar apps do not interpret the URL field.  One\n"
 "example of this is the web version of Microsoft Outlook."
 
@@ -93,14 +98,18 @@ msgid "ドキュメント"
 msgstr "Documentation"
 
 #: ../../CONTRIBUTING.md:34
+msgid "翻訳を改善"
+msgstr "Improve translation"
+
+#: ../../CONTRIBUTING.md:35
 msgid "テスト"
 msgstr "Test"
 
-#: ../../CONTRIBUTING.md:36
+#: ../../CONTRIBUTING.md:37
 msgid "参考資料"
 msgstr "References"
 
-#: ../../CONTRIBUTING.md:38
+#: ../../CONTRIBUTING.md:39
 msgid ""
 "[ワークフローにスクリプトを追加する](https://docs.github.com/ja/actions/writing-workflows"
 "/choosing-what-your-workflow-does/adding-scripts-to-your-workflow "
@@ -110,7 +119,7 @@ msgstr ""
 "/writing-workflows/choosing-what-your-workflow-does/adding-scripts-to-"
 "your-workflow \"GitHub\")"
 
-#: ../../CONTRIBUTING.md:40
+#: ../../CONTRIBUTING.md:41
 msgid ""
 "[GitHub Actions　のワークフロー構文](https://docs.github.com/ja/actions/writing-"
 "workflows/workflow-syntax-for-github-actions \"GitHub\")"
@@ -118,7 +127,7 @@ msgstr ""
 "[Workflow syntax for GitHub Actions](https://docs.github.com/en/actions"
 "/writing-workflows/workflow-syntax-for-github-actions \"GitHub\")"
 
-#: ../../CONTRIBUTING.md:42
+#: ../../CONTRIBUTING.md:43
 msgid ""
 "[pipx - On Linux](https://github.com/pypa/pipx?tab=readme-ov-file#on-"
 "linux \"GitHub\")"
@@ -126,7 +135,7 @@ msgstr ""
 "[pipx - On Linux](https://github.com/pypa/pipx?tab=readme-ov-file#on-"
 "linux \"GitHub\")"
 
-#: ../../CONTRIBUTING.md:44
+#: ../../CONTRIBUTING.md:45
 msgid ""
 "[Python のビルドとテスト](https://docs.github.com/ja/actions/use-cases-and-"
 "examples/building-and-testing/building-and-testing-python \"GitHub\")"
@@ -135,7 +144,7 @@ msgstr ""
 "cases-and-examples/building-and-testing/building-and-testing-python "
 "\"GitHub\")"
 
-#: ../../CONTRIBUTING.md:46
+#: ../../CONTRIBUTING.md:47
 msgid ""
 "[deploy-pages](https://github.com/actions/deploy-pages \"GitHub\") and "
 "[Deploy GitHub Pages site](https://github.com/marketplace/actions/deploy-"
@@ -145,7 +154,7 @@ msgstr ""
 "[Deploy GitHub Pages site](https://github.com/marketplace/actions/deploy-"
 "github-pages-site \"GitHub\")."
 
-#: ../../CONTRIBUTING.md:48
+#: ../../CONTRIBUTING.md:49
 msgid ""
 "[upload-pages-artifact](https://github.com/actions/upload-pages-artifact "
 "\"GitHub\")"
